# eo_lib

./: README.md  mypy_errors.txt  pyproject.toml  requirements.txt
.agent/workflows/: agile-standards.md
.github/workflows/: ci_cd.yml  release.yml
docs/: README.md  backlog.md  implementation_plan.md  requirements.md  sdd.md  specifications.md  walkthrough.md
scripts/: bump_version.py  sync_backlog.py
src/eo_lib/: __init__.py  config.py  factories.py
src/eo_lib/controllers/: __init__.py  initiative_controller.py  organization_controller.py  organizational_unit_controller.py  person_controller.py  project_controller.py  team_controller.py
src/eo_lib/domain/entities/: __init__.py  initiative.py  organization.py  organizational_unit.py  person.py  project.py  role.py  team.py
src/eo_lib/domain/repositories/: __init__.py  generic_repository.py  initiative_repository.py  initiative_type_repository.py  organization_repository.py  organizational_unit_repository.py  person_repository.py  project_repository.py  team_repository.py
src/eo_lib/infrastructure/database/: postgres_client.py
src/eo_lib/infrastructure/repositories/: __init__.py  generic_postgres_repository.py  json_repositories.py  memory_repositories.py  postgres_initiative_repository.py  postgres_initiative_type_repository.py  postgres_organization_repository.py  postgres_person_repository.py  (+3 more)
src/eo_lib/services/: __init__.py  initiative_service.py  organization_service.py  organizational_unit_service.py  person_service.py  project_service.py  team_service.py
tests/: conftest.py  demo.py  test_domain_expansion.py  test_initiative_service.py  test_person_service.py  test_project_service.py  test_team_service.py
