[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo_lib"
version = "0.1.4"
description = "A strictly architectural Python CRUD library."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Paulo Sérgio dos Santos Júnior", email = "paulossjunior@gmail.com" },
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/eo_lib"]
